Made a two column layout, still buggy, needs some bottom alignment

--- a/crunchkey.css
+++ b/crunchkey.css
@@ -21,15 +21,23 @@
 nav
 {
 	text-align: center;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
     padding: 20px;
     font-size: 8px;
 	/* above is default font sive, botton is to use viewport sizing for responsive design */
 	font-Size: 5.5vmin;
 	border: 2px solid;
     border-radius: 25px;
+    display:block;
+    float:left;
+    width: 12%;
+}
+
+nav ul
+{
+	 list-style-type: none;
+	 text-align: center;
+	 padding: 0;
+     list-style-type: none;
 }
 
 /* links in navigation */
@@ -43,6 +51,11 @@ nav a
     animation-delay: 1s;
     -webkit-animation-duration: 2s;
 	-webkit-animation-delay: 1s;
+}
+
+#IO
+{
+	margin-left: 6vmin;
 }
 
 body
@@ -108,7 +121,7 @@ form
 /* Our input box*/
 #inputBox
 {
-	width: 90%;
+	width: 70%;
 	margin: 10px;
 	font-family: calcFont;
 	font-size: 7vmin;
